Fairly decent initial styles for the history list

--- a/views/history.haml
+++ b/views/history.haml
@@ -1,1 +1,8 @@
-%table#history
+.ui-widget
+  %table#history
+    %thead.ui-widget-header
+      %tr
+        %td Date
+        %td Name
+        %td Amount
+    %tbody.ui-widget-content
