More progress on the history list

--- a/views/history.haml
+++ b/views/history.haml
@@ -2,7 +2,8 @@
   %table#history
     %thead.ui-widget-header
       %tr
-        %td Date
-        %td Name
-        %td Amount
+        %td.date Date
+        %td.name Name
+        %td.amount Amount
+        %td.spacer
     %tbody.ui-widget-content
