--- a/views/stylesheets/_base.sass
+++ b/views/stylesheets/_base.sass
@@ -23,7 +23,7 @@ body
     background: #fff
     border: 1px solid #ccc
     .content
-      padding: 12px
+      padding: 12px 0 12px 12px
   #sidebar
     +column(9)
     +last
