Added a sample reward and a rewards summary sidebar

--- a/public/templates/item.handlebars
+++ b/public/templates/item.handlebars
@@ -5,7 +5,8 @@
   <p class="name">{{ name }}</p>
   {{#offer}}
   <p class="offer {{ category }}">
-    <a href="{{ url }}">{{ title }}</a>
+    {{ title }}
+    <em>{{ amount }}</em>
   </p>
   {{/offer}}
 </td>
