--- a/views/index.haml
+++ b/views/index.haml
@@ -8,5 +8,8 @@
       .content
         = haml(:history, :layout => false)
     #sidebar
+      .default
+        = haml(:accounts, :layout => false)
+        = haml(:"rewards-summary", :layout => false)
       
   %script{"data-main" => "main", :src => "javascripts/require-jquery.js?v=1"}
