--- a/views/stylesheets/_base.sass
+++ b/views/stylesheets/_base.sass
@@ -2,7 +2,15 @@
 !blueprint_grid_width = 30px
 !blueprint_grid_margin = 10px
 
-!font_color = #333
+$font_color = darken(#5F83B9, 5)
+$subtle_color = #999
+
+$history_row_border_color = lighten(#A7CFE6, 15)
+$history_row_date_border_color = lighten(#A7CFE6, 10)
+$history_row_stripe_color = lighten(#A7CFE6, 19)
+$history_row_selected_color = lighten(#A7CFE6, 10)
+$history_row_selected_border_color = #A7CFE6
+$history_font_color = $font_color
 
 @import compass/reset.sass
 @import compass/utilities.sass
@@ -34,3 +42,5 @@ body
     margin: 15px 0 0 590px
     +border-right-radius(8px)
     min-height: 1000px
+    &.selected
+      background: $history_row_selected_color
