--- a/views/stylesheets/_history.sass
+++ b/views/stylesheets/_history.sass
@@ -1,9 +1,3 @@
-$history_row_border_color = lighten(#A7CFE6, 15)
-$history_row_date_border_color = lighten(#A7CFE6, 10)
-$history_row_stripe_color = lighten(#A7CFE6, 19)
-$history_row_selected_color = lighten(#A7CFE6, 10)
-$history_row_selected_border_color = #A7CFE6
-$history_font_color = #5F83B9
 //$history_font_color = #0d2054
 
 $table_padding = 12px
@@ -37,12 +31,12 @@ table#history
           border: none !important
         &.name
           .offer
-            margin: -0.2em 0 0 0
-            a
-              +link-colors(#aaa)
-              +hover-link
-              text-decoration: none
-              font-size: 10px
+            margin: 0
+            font-size: 10px
+            color: $subtle_color
+            em
+              font-style: normal
+              
       th
         font-weight: normal
       &.repeat-date
@@ -63,4 +57,9 @@ table#history
         td, th, td.spacer
           border-top-color: $history_row_selected_color
           background: $history_row_selected_color
+      &.reward
+        td, th
+          background: #eaffe7
+          color: #090
+          font-weight: bold
 
