Minor style tweaks

--- a/views/stylesheets/_rewards.sass
+++ b/views/stylesheets/_rewards.sass
@@ -29,6 +29,9 @@
           font-size: 14px
           padding-top: 20px
           border-bottom: 1px solid $history_row_border_color
+        &:first-child
+          th
+            padding-top: 10px
 
 #accounts
   padding-top: 2em
