Added "Reward" text in front of rewards.

--- a/public/templates/item.handlebars
+++ b/public/templates/item.handlebars
@@ -6,7 +6,7 @@
   {{#offer}}
   <p class="offer {{ category }}">
     {{ title }}
-    <em>{{ amount }}</em>
+    <em>Reward: {{ amount }}</em>
   </p>
   {{/offer}}
 </td>
