Remove green background from reward redemptions.

--- a/views/stylesheets/_history.sass
+++ b/views/stylesheets/_history.sass
@@ -36,6 +36,7 @@ table#history
             color: $subtle_color
             em
               font-style: normal
+              color: #090
               
       th
         font-weight: normal
@@ -59,7 +60,6 @@ table#history
           background: $history_row_selected_color
       &.reward
         td, th
-          background: #eaffe7
+          //background: #eaffe7
           color: #090
-          font-weight: bold
 
