Removed need for "main" entry point
I removed the need for main.coffee by adding the initial dependencies to the script block in index.haml.  I also moved require-jquery.js to lib/require-jquery.js.

--- a/views/index.haml
+++ b/views/index.haml
@@ -11,5 +11,8 @@
       .default
         = haml(:accounts, :layout => false)
         = haml(:"rewards-summary", :layout => false)
-      
-  %script{"data-main" => "main", :src => "javascripts/require-jquery.js?v=1"}
+
+  %script{:src => "javascripts/lib/require-jquery.js?v=1"}
+
+  :javascript
+    require({ baseUrl: "/javascripts" }, ["order!lib/underscore", "order!lib/backbone", "order!app/history"])
