Added initial jasmine tests and cleaned up coffeescript files

--- a/views/index.haml
+++ b/views/index.haml
@@ -15,4 +15,6 @@
   %script{:src => "javascripts/compiled/lib/require-jquery.js?v=1"}
 
   :javascript
-    require({ baseUrl: "/javascripts/compiled" }, ["order!lib/underscore", "order!lib/backbone", "order!app/timeline"])
+    require({ baseUrl: "/javascripts/compiled" }, ["order!lib/underscore", "order!lib/backbone", "order!app/timeline"], function(underscore, backbone, Timeline) {
+      Timeline.items.fetch();
+    });
