Initial commit of Merchant View
Included specs and a very basic design (way too much like Twitter, but for now it conveys the idea).

--- a/views/index.haml
+++ b/views/index.haml
@@ -11,6 +11,7 @@
       .default
         = haml(:accounts, :layout => false)
         = haml(:"rewards-summary", :layout => false)
+      #merchant-view{:style => "display: none" }= haml(:"merchant-view", :layout => false)
 
   %script{:src => "javascripts/compiled/lib/require-jquery.js?v=1"}
 
