--- a/views/stylesheets/_base.sass
+++ b/views/stylesheets/_base.sass
@@ -30,6 +30,7 @@ body
     z-index: 2
     background: #fff
     border: 1px solid #ccc
+    position: relative
     .content
       padding: 12px
   #sidebar
@@ -42,5 +43,6 @@ body
     margin: 15px 0 0 590px
     +border-right-radius(8px)
     min-height: 1000px
+    position: relative
     &.selected
       background: $timeline_row_selected_color
