Cleaned up MerchantView
* Change the position from "absolute" to "fixed" so it stays within the window on scroll
* Hide the default sidebar content if the merchant view is visible.
* Add documentation

--- a/views/stylesheets/_merchants.sass
+++ b/views/stylesheets/_merchants.sass
@@ -1,6 +1,6 @@
 #merchant-view
-  position: absolute
-  top: 5px
+  position: fixed
+  top: 32px
   padding: 10px
   border: 1px solid #ccc
   border-width: 1px 1px 1px 0
