Minor style changes for timeline

--- a/views/stylesheets/_merchants.sass
+++ b/views/stylesheets/_merchants.sass
@@ -5,7 +5,7 @@
   border: 1px solid #ccc
   border-width: 1px 1px 1px 0
   +border-right-radius(5px)
-  background: #eee
+  background: $timeline_row_selected_color
   width: 323px
   min-height: 500px
   .close
