--- a/views/stylesheets/_base.sass
+++ b/views/stylesheets/_base.sass
@@ -8,8 +8,11 @@ $subtle_color = #999
 $timeline_row_border_color = lighten(#A7CFE6, 15)
 $timeline_row_date_border_color = lighten(#A7CFE6, 10)
 $timeline_row_stripe_color = lighten(#A7CFE6, 20)
-$timeline_row_selected_color = lighten(#A7CFE6, 10)
-$timeline_row_selected_border_color = #A7CFE6
+
+$timeline_row_selected_color = #f1f1f1
+
+$timeline_row_selected_border_color = #ddd
+
 $timeline_font_color = $font_color
 
 @import compass/reset.sass
