--- a/public/javascripts/compiled/views/member-timeline/item.handlebars
+++ b/public/javascripts/compiled/views/member-timeline/item.handlebars
@@ -4,8 +4,8 @@
 <td class="name">
   <p class="name">{{ name }}</p>
   {{#offer}}
-  <p class="offer {{ category }}">
-    {{ title }}
+  <p class="offer">
+    {{ name }}
     <em>Reward: {{ amount }}</em>
   </p>
   {{/offer}}
