Added initial offer form

--- a/client/sass/_merchants.sass
+++ b/client/sass/_merchants.sass
@@ -12,3 +12,15 @@
     float: right
     .ui-button-text
       font-size: 11px
+  form
+    margin: 2em 0.5em 0
+    p.additional-question
+      margin: 0.5em 0
+      font-size: 93%
+    textarea
+      width: 95%
+      height: 75px
+    button
+      .ui-button-text
+        font-size: 11px
+        line-height: 1.2em
