--- a/client/sass/screen.sass
+++ b/client/sass/screen.sass
@@ -1,4 +1,5 @@
 @import base
+@import theme
 
 +blueprint-typography
 +blueprint-utilities
@@ -10,3 +11,4 @@
 @import timeline
 @import rewards
 @import merchants
+
