--- a/client/views/offers/templates/comment.handlebars
+++ b/client/views/offers/templates/comment.handlebars
@@ -1,1 +1,7 @@
-(comment template)
+<label>{{question}}</label>
+
+<p class="additional-question">{{additional_question}}</p>
+
+<textarea></textarea>
+
+<button class="submit">Submit</button>
