--- a/client/sass/jquery_ui_custom.sass
+++ b/client/sass/jquery_ui_custom.sass
@@ -1,7 +1,7 @@
 .ui-button
   .ui-icon
-    margin-top: -9px !important
+    margin-top: -9px
   .ui-button-text
     font-size: 11px
     line-height: 1em
-    padding: 3px 5px 3px 25px
+    padding: 7px 12px 7px 23px
