More minor style changes

--- a/client/sass/jquery_ui_custom.sass
+++ b/client/sass/jquery_ui_custom.sass
@@ -4,4 +4,5 @@
   .ui-button-text
     font-size: 11px
     line-height: 1em
-    padding: 7px 12px 7px 23px
+    padding-top: 7px
+    padding-bottom: 7px
