--- a/public/stylesheets/compiled/jquery_ui_custom.css
+++ b/public/stylesheets/compiled/jquery_ui_custom.css
@@ -6,5 +6,6 @@
 .ui-button .ui-button-text {
   font-size: 11px;
   line-height: 1em;
-  padding: 7px 12px 7px 23px;
+  padding-top: 7px;
+  padding-bottom: 7px;
 }
