Worked on merchant feedback

--- a/client/sass/_timeline.sass
+++ b/client/sass/_timeline.sass
@@ -24,13 +24,15 @@ table#timeline
           text-align: right
           padding-right: 10px
         &.name
-          .offer
+          .offer, .feedback
             margin: 0
             font-size: 10px
             color: $subtle_color
             em
               font-style: normal
               color: #090
+          .feedback
+            color: #090
               
       th
         font-weight: normal
