--- a/client/sass/_base.sass
+++ b/client/sass/_base.sass
@@ -15,13 +15,21 @@ $timeline_row_selected_border_color = #ddd
 
 $timeline_font_color = $font_color
 
-@import compass/reset.sass
-@import compass/utilities.sass
-@import compass/css3.sass
-@import blueprint/screen.sass
+@import compass/reset
+@import compass/utilities
+@import compass/css3
+
+@import blueprint/screen
 
 body
   background: #D3DADF url(/images/background.png) repeat-x left top
+
+textarea
+  font-family: $blueprint_font_family
+  font-size: 13px
+  color: #333
+  line-height: 1.4em
+
 
 #container
   +column(24)
