--- a/client/sass/_merchants.sass
+++ b/client/sass/_merchants.sass
@@ -12,7 +12,7 @@
     float: right
     .ui-button-text
       font-size: 11px
-  form
+  form.offer
     margin: 2em 0.5em 0
     p.additional-question
       margin: 0.5em 0
@@ -20,3 +20,11 @@
     textarea
       width: 98%
       height: 75px
+    p.reward
+      float: right
+      color: #090
+      margin: 0.3em 0 0
+  .feedback
+    padding: 15px 0 0
+    p
+      margin: 0.5em 0.2em
