--- a/public/javascripts/compiled/views/member-timeline/item.handlebars
+++ b/public/javascripts/compiled/views/member-timeline/item.handlebars
@@ -3,11 +3,18 @@
 </td>
 <td class="name">
   <p class="name">{{ name }}</p>
-  {{#offer}}
-  <p class="offer">
-    {{ name }}
-    <em>Reward: {{ amount }}</em>
-  </p>
-  {{/offer}}
+  {{#feedback}}
+    <p class="feedback">
+      Thanks for your feedback!
+    </p>
+  {{/feedback}}
+  {{^feedback}}
+    {{#offer}}
+      <p class="offer">
+        {{ name }}
+        <em>Reward: {{ amount }}</em>
+      </p>
+    {{/offer}}
+  {{/feedback}}
 </td>
 <td class="amount">{{{ formatted_amount }}}</td>
