--- a/public/javascripts/compiled/views/offers/templates/comment.handlebars
+++ b/public/javascripts/compiled/views/offers/templates/comment.handlebars
@@ -2,6 +2,8 @@
 
 <p class="additional-question">{{additional_question}}</p>
 
-<textarea></textarea>
+<textarea name="response[comment]"></textarea>
+
+<p class="reward">{{ reward }}</p>
 
 <button class="submit">Submit</button>
