--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -59,12 +59,20 @@ a img {
   border: none;
 }
 
-/* line 23, ../../../client/sass/_base.sass */
+/* line 24, ../../../client/sass/_base.sass */
 body {
   background: #d3dadf url(/images/background.png) repeat-x left top;
 }
 
-/* line 26, ../../../client/sass/_base.sass */
+/* line 27, ../../../client/sass/_base.sass */
+textarea {
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  color: #333333;
+  line-height: 1.4em;
+}
+
+/* line 34, ../../../client/sass/_base.sass */
 #container {
   display: inline;
   float: left;
@@ -77,7 +85,7 @@ body {
 * html #container {
   overflow-x: hidden;
 }
-/* line 30, ../../../client/sass/_base.sass */
+/* line 38, ../../../client/sass/_base.sass */
 #container #main {
   display: inline;
   float: left;
@@ -96,11 +104,11 @@ body {
 * html #container #main {
   overflow-x: hidden;
 }
-/* line 37, ../../../client/sass/_base.sass */
+/* line 45, ../../../client/sass/_base.sass */
 #container #main .content {
   padding: 12px;
 }
-/* line 39, ../../../client/sass/_base.sass */
+/* line 47, ../../../client/sass/_base.sass */
 #container #sidebar {
   display: inline;
   float: left;
@@ -131,7 +139,7 @@ body {
 * html #container #sidebar {
   overflow-x: hidden;
 }
-/* line 50, ../../../client/sass/_base.sass */
+/* line 58, ../../../client/sass/_base.sass */
 #container #sidebar.selected {
   background: #f1f1f1;
 }
@@ -1332,46 +1340,50 @@ table#timeline tbody tr td.amount {
   padding-right: 10px;
 }
 /* line 27, ../../../client/sass/_timeline.sass */
-table#timeline tbody tr td.name .offer {
+table#timeline tbody tr td.name .offer, table#timeline tbody tr td.name .feedback {
   margin: 0;
   font-size: 10px;
   color: #999999;
 }
 /* line 31, ../../../client/sass/_timeline.sass */
-table#timeline tbody tr td.name .offer em {
+table#timeline tbody tr td.name .offer em, table#timeline tbody tr td.name .feedback em {
   font-style: normal;
   color: #009900;
 }
-/* line 35, ../../../client/sass/_timeline.sass */
+/* line 34, ../../../client/sass/_timeline.sass */
+table#timeline tbody tr td.name .feedback {
+  color: #009900;
+}
+/* line 37, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr th {
   font-weight: normal;
 }
-/* line 38, ../../../client/sass/_timeline.sass */
+/* line 40, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr.repeat-date td, table#timeline tbody tr.repeat-date th {
   border-top: 1px solid #e3eff7;
 }
-/* line 41, ../../../client/sass/_timeline.sass */
+/* line 43, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr.repeat-date td.date span {
   display: none;
 }
-/* line 44, ../../../client/sass/_timeline.sass */
+/* line 46, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr:nth-child(odd) td, table#timeline tbody tr:nth-child(odd) th {
   background: #f6fafd;
 }
-/* line 47, ../../../client/sass/_timeline.sass */
+/* line 49, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr:first-child td, table#timeline tbody tr:first-child th {
   border-top: none;
 }
-/* line 50, ../../../client/sass/_timeline.sass */
+/* line 52, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr.selected td, table#timeline tbody tr.selected th {
   border-top-color: #dddddd;
   background: #f1f1f1;
 }
-/* line 54, ../../../client/sass/_timeline.sass */
+/* line 56, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr.reward td, table#timeline tbody tr.reward th {
   color: #009900;
 }
-/* line 57, ../../../client/sass/_timeline.sass */
+/* line 59, ../../../client/sass/_timeline.sass */
 table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr th {
   border-top-color: #e3e3e3;
 }
@@ -1470,16 +1482,61 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   font-size: 11px;
 }
 /* line 15, ../../../client/sass/_merchants.sass */
-#merchant-view form {
+#merchant-view form.offer {
   margin: 2em 0.5em 0;
 }
 /* line 17, ../../../client/sass/_merchants.sass */
-#merchant-view form p.additional-question {
+#merchant-view form.offer p.additional-question {
   margin: 0.5em 0;
   font-size: 93%;
 }
 /* line 20, ../../../client/sass/_merchants.sass */
-#merchant-view form textarea {
+#merchant-view form.offer textarea {
   width: 98%;
   height: 75px;
+}
+/* line 23, ../../../client/sass/_merchants.sass */
+#merchant-view form.offer p.reward {
+  float: right;
+  color: #009900;
+  margin: 0.3em 0 0;
+}
+/* line 27, ../../../client/sass/_merchants.sass */
+#merchant-view .feedback {
+  padding: 15px 0 0;
+}
+/* line 29, ../../../client/sass/_merchants.sass */
+#merchant-view .feedback p {
+  margin: 0.5em 0.2em;
+}
+
+/* line 2, ../../../client/sass/_social.sass */
+.tweet-form textarea {
+  width: 96%;
+  height: 58px;
+  margin: 0 0 0;
+}
+/* line 6, ../../../client/sass/_social.sass */
+.tweet-form p.note {
+  font-size: 85%;
+  float: left;
+  width: 65%;
+  margin: 0;
+}
+/* line 11, ../../../client/sass/_social.sass */
+.tweet-form .count-and-button {
+  text-align: right;
+  margin: 6px 0 0 0;
+}
+/* line 14, ../../../client/sass/_social.sass */
+.tweet-form .count-and-button .count {
+  position: relative;
+  top: 3px;
+  margin-right: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+/* line 21, ../../../client/sass/_social.sass */
+.tweet-form.over-limit .count {
+  color: #990000;
 }
