Feedback is being displayed on the merchant page.

--- a/client/sass/_merchants.sass
+++ b/client/sass/_merchants.sass
@@ -28,3 +28,15 @@
     padding: 15px 0 0
     p
       margin: 0.5em 0.2em
+
+#feedback
+  h3
+    margin: 0 0 0.3em
+    font-size: 14px
+  #feedback-list
+    +list-with_buttons(feedback)
+    border: 1px solid #e3eff7
+    border-width: 1px 1px 0
+    li
+      p.comment
+        margin: 0 0 0.2em
