Added "Sales to Members" chart on merchant view

--- a/client/sass/_merchants.sass
+++ b/client/sass/_merchants.sass
@@ -29,10 +29,13 @@
     p
       margin: 0.5em 0.2em
 
-#feedback
+#feedback, #sales-chart
   h3
-    margin: 0 0 0.3em
+    margin: 0 0 0.5em
     font-size: 14px
+
+#feedback
+  padding: 10px 0 0 0
   #feedback-list
     +list-with_buttons(feedback)
     border: 1px solid #e3eff7
