--- a/client/views/merchants/sidebar.handlebars
+++ b/client/views/merchants/sidebar.handlebars
@@ -1,16 +1,18 @@
 <a href="#" class="close">Close</a>
 
-<div class="content">
+<div class="name-and-location">
   {{#merchant}}
+    {{#avatar}}
+    <img src="{{ . }}" class="avatar" />
+    {{/avatar}}
     <h3>{{ name }}</h3>
   {{/merchant}}
+  {{#location}}
+    <p class="address">{{ ../formatted_address }}</p>
+    <p class="phone">{{ phone }}</p>
+  {{/location}}
   {{^merchant}}
     <h3>{{ name }}</h3>
   {{/merchant}}
 </div>
 
-{{#feedback}}
-  <div class="feedback">
-    <div class="tweet-feedback"></div>
-  </div>
-{{/feedback}}
