--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1454,7 +1454,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #merchant-view {
   position: fixed;
   top: 32px;
-  padding: 10px;
+  padding: 20px 10px;
   border: 1px solid #cccccc;
   border-width: 1px 1px 1px 0;
   -moz-border-radius-topright: 5px;
@@ -1469,58 +1469,74 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   -ms-border-bottom-right-radius: 5px;
   -khtml-border-bottom-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  background: #f1f1f1;
+  background: white;
   width: 323px;
   min-height: 500px;
 }
 /* line 11, ../../../client/sass/_merchants.sass */
 #merchant-view .close {
+  display: none;
   float: right;
 }
-/* line 13, ../../../client/sass/_merchants.sass */
+/* line 14, ../../../client/sass/_merchants.sass */
 #merchant-view .close .ui-button-text {
   font-size: 11px;
 }
-/* line 15, ../../../client/sass/_merchants.sass */
+/* line 17, ../../../client/sass/_merchants.sass */
+#merchant-view .name-and-location .avatar {
+  float: right;
+  padding: 3px;
+}
+/* line 20, ../../../client/sass/_merchants.sass */
+#merchant-view .name-and-location h3 {
+  font-size: 16px;
+  margin: 0 0 0.5em 0;
+}
+/* line 23, ../../../client/sass/_merchants.sass */
+#merchant-view .name-and-location p.address, #merchant-view .name-and-location p.phone {
+  font-size: 11px;
+  margin: 0.2em 0;
+}
+/* line 26, ../../../client/sass/_merchants.sass */
 #merchant-view form.offer {
   margin: 2em 0.5em 0;
 }
-/* line 17, ../../../client/sass/_merchants.sass */
+/* line 28, ../../../client/sass/_merchants.sass */
 #merchant-view form.offer p.additional-question {
   margin: 0.5em 0;
   font-size: 93%;
 }
-/* line 20, ../../../client/sass/_merchants.sass */
+/* line 31, ../../../client/sass/_merchants.sass */
 #merchant-view form.offer textarea {
   width: 98%;
   height: 75px;
 }
-/* line 23, ../../../client/sass/_merchants.sass */
+/* line 34, ../../../client/sass/_merchants.sass */
 #merchant-view form.offer p.reward {
   float: right;
   color: #009900;
   margin: 0.3em 0 0;
 }
-/* line 27, ../../../client/sass/_merchants.sass */
+/* line 38, ../../../client/sass/_merchants.sass */
 #merchant-view .feedback {
   padding: 15px 0 0;
 }
-/* line 29, ../../../client/sass/_merchants.sass */
+/* line 40, ../../../client/sass/_merchants.sass */
 #merchant-view .feedback p {
   margin: 0.5em 0.2em;
 }
 
-/* line 33, ../../../client/sass/_merchants.sass */
+/* line 44, ../../../client/sass/_merchants.sass */
 #feedback h3, #sales-chart h3 {
   margin: 0 0 0.5em;
   font-size: 14px;
 }
 
-/* line 37, ../../../client/sass/_merchants.sass */
+/* line 48, ../../../client/sass/_merchants.sass */
 #feedback {
   padding: 10px 0 0 0;
 }
-/* line 39, ../../../client/sass/_merchants.sass */
+/* line 50, ../../../client/sass/_merchants.sass */
 #feedback #feedback-list {
   list-style: none;
   margin: 0;
@@ -1593,7 +1609,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #feedback #feedback-list li.feedback ul.buttons .ui-button .ui-button-text {
   font-size: 10px;
 }
-/* line 44, ../../../client/sass/_merchants.sass */
+/* line 55, ../../../client/sass/_merchants.sass */
 #feedback #feedback-list li p.comment {
   margin: 0 0 0.2em;
 }
