Initial version of working rate system

--- a/client/sass/_merchants.sass
+++ b/client/sass/_merchants.sass
@@ -15,6 +15,7 @@
     .ui-button-text
       font-size: 11px
   .name-and-location
+    height: 58px
     .avatar
       float: right
       padding: 3px
