--- a/client/views/member-timeline/item.handlebars
+++ b/client/views/member-timeline/item.handlebars
@@ -2,6 +2,7 @@
   <span>{{ formatted_timestamp }}<span>
 </td>
 <td class="name">
+  <div class="rating" id="{{ id }}"></div>
   <p class="name">{{ name }}</p>
   {{#feedback}}
     <p class="feedback">
