--- a/client/sass/_timeline.sass
+++ b/client/sass/_timeline.sass
@@ -24,6 +24,14 @@ table#timeline
           text-align: right
           padding-right: 10px
         &.name
+          .rating
+            width: 80px !important
+            float: right
+            margin-top: 2px
+            +opacity(0.5)
+            line-height: 1em
+            &:hover, &.active
+              +opacity(1)
           .offer, .feedback
             margin: 0
             font-size: 10px
@@ -33,7 +41,7 @@ table#timeline
               color: #090
           .feedback
             color: #090
-              
+
       th
         font-weight: normal
       &.repeat-date
